--- a/roles/setup-minio/tasks/main.yml
+++ b/roles/setup-minio/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
 # tasks file for minio-setup
+- include_tasks: dns-update.yml
+  tags: dns
 - include_tasks: minio-pre-install.yml
   tags: pre-install
 - include_tasks: minio-install.yml
